<resources>
    <string name="app_name">Заметки</string>
    <string name="title_activity_note_presenter">NotePresenter</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_note_view">NoteView</string>
    <string name="SaveSuccess">ЗАМЕТКА УСПЕШНО СОХРАНЕНА</string>
    <string name="SaveFaild">ЗАМЕТКА НЕ СОХРАНЕНА</string>
    <string name="content">Введите текст...</string>
    <string name="btn_save">Сохранить</string>
    <string name="title">Заголовок</string>
    <string name="send">Поделиться</string>
    <string name="about">О программе</string>
    <string name="aboutText">Приложение Заметки</string>
    <string name="version">Версия 1.0.0</string>
    <string name="toolBarMainName">Заметки</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Subtitle">Подзаголовок</string>
</resources>